# Multicore-Matching

./: CMakeLists.txt  FindTBB.cmake  INSTALL  SS-Butterfly_weights_shifted_1_10K_Edges_Row_Major.mtx  benchmarkGen.sh  runTiming.sh  small.mtx
DotWriter/lib/: Enums.h
gtest/: CMakeLists.txt  GoogleTest.cmake
gtest/src/: run_all.cc  tree_arithmetic.cc  tree_arithmetic.cu
results/: graphs.txt
src/: Array.cpp  Array.h  BussKernelization.cu  BussKernelization.cuh  CMakeLists.txt  GraphViz.cpp  GraphViz.cu  GraphViz.cuh  GraphViz.h  GrowthPolicy.cu  GrowthPolicy.cuh  GrowthPolicy.h  TreeBuilder.cu  TreeBuilder.cuh  TreePolicy.h  TreeRepresentationPolicy.h  TritArrayMaker.cpp  TritArrayMaker.h  addressUtils.h  graph.cu  graph.h  matchcpu.cu  matchcpu.h  matchgpu.cu  matchgpu.h  matchtbb.cu  matchtbb.h  vcgpu.cu  vcgpu.cuh  vcgpu.h  vcgpu2.cu  vcgpu2.cuh
utils/: GraphViz.cpp  GraphViz.h
